# smart-robotic-arm

./: CITATION.cff  CMakeLists.txt  LICENSE  README.md  setup.sh
Backend python/: analysis.ipynb  data_logger.py  main.py  requirements.txt  vision_tracking.py
app/: page.tsx
components/ui/: chart.js
dashboard/: index.html  page.js  style.css
data/: dataset.csv
docs/: API.md  HARDWARE.md  README.zh-en.md  TROUBLESHOOTING.md
include/: config.h
scripts/: health_check.sh  start_system.sh  stop_system.sh
src/: driver_motor.cpp  main.cpp  sensor_ultrasonic.cpp  sensor_ultrasonic.h  servo_control.cpp  servo_control.h
